--- a/chaincode-viewer/index.html
+++ b/chaincode-viewer/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chaincode Template Viewer</title>
+    <title>Smart Contract Template Viewer</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -32,7 +32,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Chaincode Template</h1>
+        <h1>Smart Contract Template</h1>
         <pre id="templateContent">Loading...</pre>
     </div>
     <script>
