--- a/chaincode-viewer/public/main.html
+++ b/chaincode-viewer/public/main.html
@@ -46,7 +46,7 @@
     <h1>Data Collection System</h1>
     <button onclick="window.location.href='/register.html'">회원가입</button>
     <button onclick="window.location.href='/login.html'">로그인</button>
-    <button onclick="window.location.href='/index.html'">템플릿 리스트</button>
+    <button onclick="window.location.href='/template-list.html'">템플릿 리스트</button>
   </div>
 </body>
 </html>
