--- a/Prototype/public/register.html
+++ b/Prototype/public/register.html
@@ -4,15 +4,80 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #f4f6f9;
+    }
+    .container {
+      text-align: center;
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    input {
+      display: block;
+      width: 80%;
+      padding: 10px;
+      margin: 10px 0;
+      font-size: 16px;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+      border: none;
+      border-radius: 4px;
+      background-color: #007bff;
+      color: white;
+    }
+    button:hover {
+      background-color: #0056b3;
+    }
+  </style>
 </head>
 <body>
-  <h1>Register</h1>
-  <form>
-    <!-- 회원가입 폼 구성 -->
-    <input type="text" name="username" placeholder="Username" required><br>
-    <input type="password" name="password" placeholder="Password" required><br>
-    <button type="submit">회원가입</button>
-  </form>
-  <button onclick="window.location.href='/main.html'">메인페이지로 돌아가기</button>
+  <div class="container">
+    <h1>Register</h1>
+    <form id="registerForm">
+      <input type="text" id="id" name="id" placeholder="ID" required>
+      <input type="password" id="password" name="password" placeholder="Password" required>
+      <input type="text" id="username" name="username" placeholder="Username" required>
+      <input type="text" id="name" name="name" placeholder="Name" required>
+      <button type="submit">Register</button>
+    </form>
+  </div>
+
+  <script>
+    document.getElementById('registerForm').addEventListener('submit', async function(e) {
+      e.preventDefault();
+      const id = document.getElementById('id').value;
+      const password = document.getElementById('password').value;
+      const username = document.getElementById('username').value;
+      const name = document.getElementById('name').value;
+
+      const response = await fetch('/api/register', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ id, password, username, name })
+      });
+
+      const result = await response.json();
+      if (response.ok) {
+        alert('User registered successfully');
+        window.location.href = '/'; // 성공 시 메인 페이지로 리디렉션
+      } else {
+        alert('Failed to register user: ' + result.error);
+      }
+    });
+  </script>
 </body>
 </html>
