--- a/Prototype/public/main.html
+++ b/Prototype/public/main.html
@@ -42,18 +42,38 @@
     .hidden {
       display: none;
     }
+    .user-info {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 20px;
+    }
+    .user-info div {
+      margin-right: 10px;
+    }
+    .logout-btn {
+      padding: 5px 10px;
+      font-size: 12px;
+      background-color: #dc3545;
+    }
+    .logout-btn:hover {
+      background-color: #c82333;
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Data Collection System</h1>
+    <div id="userInfo" class="user-info hidden">
+      <div></div>
+      <button id="logoutBtn" class="logout-btn hidden" onclick="logout()">로그아웃</button>
+    </div>
     <button id="registerBtn" class="hidden" onclick="window.location.href='/register.html'">회원가입</button>
     <button id="loginBtn" onclick="window.location.href='/login.html'">로그인</button>
-    <button id="templateListBtn" class="hidden" onclick="window.location.href='/template-list.html'">템플릿 리스트</button>
-    <button id="logoutBtn" class="hidden" onclick="logout()">로그아웃</button>
     <button id="collectDataBtn" class="hidden" onclick="window.location.href='/collect-data.html'">데이터 수집하기</button>
     <button id="participateDataCollectionBtn" class="hidden" onclick="window.location.href='/participate-data-collection.html'">데이터 수집에 참여하기</button>
-    <div id="userInfo" class="hidden"></div>
+    <button id="templateListBtn" class="hidden" onclick="window.location.href='/template-list.html'">스마트 컨트랙트 템플릿 리스트</button>
+    <button id="monitorSmartContractsBtn" class="hidden" onclick="window.location.href='/monitor-smart-contracts.html'">스마트 컨트랙트 모니터링</button>
   </div>
 
   <script>
@@ -66,11 +86,12 @@
           document.getElementById('loginBtn').classList.add('hidden');
           document.getElementById('registerBtn').classList.add('hidden');
           document.getElementById('logoutBtn').classList.remove('hidden');
-          document.getElementById('userInfo').textContent = `Logged in as ${data.id}`;
+          document.getElementById('userInfo').children[0].textContent = `Logged in as ${data.id}`;
           document.getElementById('userInfo').classList.remove('hidden');
 
           if (data.isAdmin) {
             document.getElementById('templateListBtn').classList.remove('hidden');
+            document.getElementById('monitorSmartContractsBtn').classList.remove('hidden');
           } else {
             document.getElementById('collectDataBtn').classList.remove('hidden');
             document.getElementById('participateDataCollectionBtn').classList.remove('hidden');
@@ -82,6 +103,7 @@
           document.getElementById('logoutBtn').classList.add('hidden');
           document.getElementById('collectDataBtn').classList.add('hidden');
           document.getElementById('participateDataCollectionBtn').classList.add('hidden');
+          document.getElementById('monitorSmartContractsBtn').classList.add('hidden');
           document.getElementById('userInfo').classList.add('hidden');
         }
       } catch (error) {
