[update] index.html 주석 수정

--- a/Prototype/public/index.html
+++ b/Prototype/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chaincode Viewer</title>
 </head>
+<!-- 주석변경 -->
 <body>
   <h1>Chaincode IDs</h1>
   <ul id="chaincodeList">Loading...</ul>
