[update] 템플릿 뷰 출력화면 함수별로 블록으로 구별(like jupyter)

--- a/Prototype/public/template-view.html
+++ b/Prototype/public/template-view.html
@@ -17,10 +17,18 @@
     h1 {
       margin-bottom: 20px;
     }
-    textarea {
+    .function-block {
       width: 80%;
-      height: 300px;
+      background-color: #fff;
+      border: 1px solid #ddd;
+      border-radius: 8px;
       margin-bottom: 20px;
+      padding: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    pre {
+      white-space: pre-wrap;
+      word-wrap: break-word;
     }
     button {
       padding: 10px 20px;
@@ -38,7 +46,7 @@
 </head>
 <body>
   <h1>Template View</h1>
-  <textarea id="templateContent" readonly></textarea>
+  <div id="templateContent"></div>
   <button id="editButton">수정</button>
 
   <script>
@@ -53,10 +61,24 @@
         try {
           const response = await fetch(`/api/templates/${templateId}`);
           const data = await response.json();
-          templateContent.value = data.content;
+          displayTemplateContent(data.content);
         } catch (error) {
-          templateContent.value = 'Failed to load template content';
+          templateContent.innerHTML = '<div class="function-block">Failed to load template content</div>';
         }
+      }
+
+      // 템플릿 내용을 함수별로 나누어 표시
+      function displayTemplateContent(content) {
+        // 정규식으로 주석과 함수 함께 파싱
+        const functionBlocks = content.split(/(?=\/\/[^\n]*\nfunc\s+)/m);
+        functionBlocks.forEach(block => {
+          const pre = document.createElement('pre');
+          pre.textContent = block.trim();
+          const functionBlock = document.createElement('div');
+          functionBlock.className = 'function-block';
+          functionBlock.appendChild(pre);
+          templateContent.appendChild(functionBlock);
+        });
       }
 
       // 수정 버튼 클릭 시 템플릿 에디터로 이동
